Bug 1494900 - Part 1: Support optional command line arguments in the ExecInExplorer plugin. r=agashlin, a=RyanVM